--- a/News to lyric.ipynb
+++ b/News to lyric.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -225,12 +225,13 @@
    "source": [
     "from nltk.corpus import cmudict\n",
     "from itertools import izip_longest, chain\n",
-    "d = cmudict.dict()\n",
+    "stress_dictionary = cmudict.dict()\n",
     "\n",
     "poem_file = open('data/guinea_pig.txt')\n",
     "corpus = poem_file.readlines()\n",
     "poem_file.close()\n",
     "\n",
+    "#list of poem structures\n",
     "poem_structure_1 = [\n",
     "    (8, [1,3,5,7],),\n",
     "    (8, [1,3,5,7],),\n",
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -253,36 +254,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[u'DH', u'EH1', u'R'], [u'W', u'AA1', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, False, True, False, True, False, True]\n",
-      "[[u'DH', u'EH1', u'R'], [u'W', u'AA1', u'Z'], [u'EY1'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, True, True, False, True, False, True]\n",
-      "[[u'DH', u'EH1', u'R'], [u'W', u'AH1', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, False, True, False, True, False, True]\n",
-      "[[u'DH', u'EH1', u'R'], [u'W', u'AH1', u'Z'], [u'EY1'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, True, True, False, True, False, True]\n",
-      "[[u'DH', u'EH1', u'R'], [u'W', u'AH0', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, False, False, True, False, True, False, True]\n",
-      "[[u'DH', u'EH1', u'R'], [u'W', u'AH0', u'Z'], [u'EY1'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, False, True, True, False, True, False, True]\n",
-      "[[u'DH', u'EH1', u'R'], [u'W', u'AO1', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, False, True, False, True, False, True]\n",
-      "[[u'DH', u'EH1', u'R'], [u'W', u'AO1', u'Z'], [u'EY1'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']] [True, True, True, True, False, True, False, True]\n",
+      "[[u'DH', u'EH0', u'R'], [u'W', u'AA1', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']]\n",
       "\n",
-      "[[u'HH', u'IY1'], [u'AO1', u'L', u'W', u'EY2', u'Z'], [u'W', u'AO1', u'K', u'T'], [u'AH0', u'P', u'AA1', u'N'], [u'HH', u'IH1', u'Z'], [u'F', u'IY1', u'T']] [True, True, False, True, False, True, True, True]\n",
-      "[[u'HH', u'IY1'], [u'AO1', u'L', u'W', u'EY2', u'Z'], [u'W', u'AO1', u'K', u'T'], [u'AH0', u'P', u'AA1', u'N'], [u'HH', u'IH0', u'Z'], [u'F', u'IY1', u'T']] [True, True, False, True, False, True, False, True]\n",
-      "[[u'HH', u'IY1'], [u'AO1', u'L', u'W', u'IY0', u'Z'], [u'W', u'AO1', u'K', u'T'], [u'AH0', u'P', u'AA1', u'N'], [u'HH', u'IH1', u'Z'], [u'F', u'IY1', u'T']] [True, True, False, True, False, True, True, True]\n",
-      "[[u'HH', u'IY1'], [u'AO1', u'L', u'W', u'IY0', u'Z'], [u'W', u'AO1', u'K', u'T'], [u'AH0', u'P', u'AA1', u'N'], [u'HH', u'IH0', u'Z'], [u'F', u'IY1', u'T']] [True, True, False, True, False, True, False, True]\n",
+      "[[u'HH', u'UW0'], [u'B', u'IY1', u'IH0', u'NG'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'W', u'AA1', u'Z'], [u'N', u'AA0', u'T'], [u'B', u'IH1', u'G']]\n",
       "\n",
-      "[[u'AH0', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True]\n",
-      "[[u'AH0', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True, True]\n",
-      "[[u'AH0', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True]\n",
-      "[[u'AH0', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True, True]\n",
-      "[[u'AH0', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True]\n",
-      "[[u'AH0', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True, True]\n",
-      "[[u'AH0', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True]\n",
-      "[[u'AH0', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [False, True, True, True, True, True, True, True, True]\n",
-      "[[u'AE1', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True]\n",
-      "[[u'AE1', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True, True]\n",
-      "[[u'AE1', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True]\n",
-      "[[u'AE1', u'N', u'D'], [u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True, True]\n",
-      "[[u'AE1', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True]\n",
-      "[[u'AE1', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'AE1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True, True]\n",
-      "[[u'AE1', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'AE1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True]\n",
-      "[[u'AE1', u'N', u'D'], [u'HH', u'W', u'AY1', u'L'], [u'HH', u'IY1'], [u'R', u'AH1', u'N'], [u'EH1', u'Z'], [u'AY1'], [u'EY1', u'EH1', u'M'], [u'T', u'OW1', u'L', u'D']] [True, True, True, True, True, True, True, True, True]\n"
+      "True\n"
      ]
     }
    ],
@@ -320,18 +296,22 @@
     "    line_phonemes = [] \n",
     "    words = line.split(' ')\n",
     "    for word in words:\n",
-    "        word_phonemes = d.get(word)\n",
+    "        word_phonemes = stress_dictionary.get(word)\n",
+    "        if len(word_phonemes) == 1:\n",
+    "            if num_of_syllables(word_phonemes[0]) == 1:\n",
+    "                word_phonemes.append([sound if not is_stressed(sound) else sound.replace('1', '0') for sound in word_phonemes[0]])\n",
     "        line_phonemes.append(word_phonemes)\n",
     "    for candidate in combinations(*line_phonemes):\n",
     "        stresses = stress_mask(chain.from_iterable(candidate))\n",
-    "        print candidate, stresses\n",
-    "    \n",
+    "        #print candidate, stresses\n",
+    "        if stresses == structure:\n",
+    "            return candidate\n",
     "        \n",
     "\n",
-    "\n",
-    "#returns true or false; does a couplet answer to the above mentioned scheme or not?\n",
+    "# returns true or false; does a couplet answer to the above mentioned scheme or not? Do lines (have to) rhyme?\n",
     "def validate_couplet(couplet, structure):\n",
     "    pass\n",
+    "\n",
     "\n",
     "def is_vowel(sound):\n",
     "    return sound[-1].isdigit()\n",
@@ -348,23 +328,24 @@
     "#     for pron2 in d.get('because'):\n",
     "#         print pron1, pron2, is_rhyme(pron1, pron2)\n",
     "combinations([1,2,3],[4],[5,6],[7,8,9])\n",
-    "validate_line(\"there was a little guinea pig\", [1,3,5,7])\n",
+    "print validate_line(\"there was a little guinea pig\", [False, True, False, True, False, True, False, True])\n",
     "print\n",
-    "validate_line(\"he always walked upon his feet\", None)\n",
+    "print validate_line(\"who being little was not big\", [False, True, False, True, False, True, False, True])\n",
     "print\n",
-    "validate_line(\"and while he run as i am told\", None)"
+    "print is_rhyme(validate_line(\"there was a little guinea pig\", [False, True, False, True, False, True, False, True])[-1],\n",
+    "               validate_line(\"who being little was not big\",  [False, True, False, True, False, True, False, True])[-1])\n",
+    "# if one looks at the output of the former sentence, it becomes clear words consisting of only one syllable are always said to be stressed. \n",
+    "# Therefore, a function that makes sure one-syllable-words can be both stressed and unstressed will be added."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "d.get(\"there was\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
