Document news to lyric (morph) :pencil: :cat:
Also : deletion of the file morphology.ipynb :traffic_light:

--- a/News to lyric.ipynb
+++ b/News to lyric.ipynb
@@ -8,8 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Grammar"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -115,20 +122,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before proceeding you should download zip-archive with stanford parser:\n",
+    "Before proceeding one should download the zip-archive of the stanford parser:\n",
     "\n",
     "http://nlp.stanford.edu/software/stanford-parser-full-2015-04-20.zip\n",
     "\n",
-    "We need two files from there:\n",
-    "- stanford/stanford-parser.jar\n",
-    "- stanford/stanford-parser-3.5.2-models.jar\n",
+    "We need only two files from this folder:\n",
+    "    - stanford/stanford-parser.jar\n",
+    "    - stanford/stanford-parser-3.5.2-models.jar\n",
     "\n",
-    "Create a directory 'stanford' and put them there."
+    "Create a directory called 'stanford' and copy them there."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -198,12 +205,12 @@
     "collapsed": true
    },
    "source": [
-    "## Morphological analysis"
+    "## 2. Morphological analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -216,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -244,8 +251,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the cell below, 3 python files are imported. The first one is called phonetics.py and contains the following functions:\n",
+    "    - def get_phonemes(word)\n",
+    "    - def is_vowel(phoneme)\n",
+    "    - def is_consonant(phoneme)\n",
+    "    - def num_of_syllables(phoneme)\n",
+    "    - def is_stressed(phoneme)\n",
+    "    - def is_rhyme(phonemes1, phonemes2)\n",
+    "    - def stress_mask(phonemes)\n",
+    "    ((- def get_phonetic_combinations(words)))\n",
+    "The second file is called utils.py and merely contains the function called\n",
+    "    - def combinations(*args)\n",
+    "Finally there is a file named validate.py. This script contains 2 functions:\n",
+    "    - def validate_line(phonemes, structure)\n",
+    "    - def validate_couplet(couplet, structure)\n",
+    "For more information, consult the files themselves. As they contain docstrings, it becomes clear what input they require and what output they provide.\n",
+    "\n",
+    "Under # EXAMPLES, one can see how couplets are validated. Each validate function has as input both phonemes or a couplet respectively, as well as a structure. The latter defines the kind of poem we would like to validate. For example, a structure can consist of a rhyme scheme(abab) and a stress pattern(stressed/true, unstressed/false, stressed/true ...).\n",
+    "In the output below the caption, the line which fits the requirements from the pattern is chosen from all combinations possible provided by cmudict'. However, cmudict predicted for words consisting of one syllable to be stressed at any time. Therefore,a function making sure one-syllable words can be both stressed ans unstressed has been added."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -263,32 +294,9 @@
     }
    ],
    "source": [
-    "def num_of_syllables(phonetic_translation):\n",
-    "    number_of_syllables = 0\n",
-    "    for el in phonetic_translation:\n",
-    "        if el[-1].isdigit() == True:\n",
-    "            number_of_syllables += 1\n",
-    "        else:\n",
-    "            pass\n",
-    "    return number_of_syllables\n",
-    "        \n",
-    "def is_stressed(phoneme):\n",
-    "    if phoneme[-1] == '1':\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "\n",
-    "def stress_mask(phonemes):\n",
-    "    return [is_stressed(ph) for ph in phonemes if is_vowel(ph)]\n",
-    "\n",
-    "def combinations(*args):\n",
-    "    if len(args) == 1:\n",
-    "        return [[x] for x in args[0]]\n",
-    "    combs = []\n",
-    "    for item in args[0]:\n",
-    "        for x in combinations(*args[1:]):\n",
-    "            combs.append([item] + x)\n",
-    "    return combs\n",
+    "import phonetics as ph\n",
+    "import utils\n",
+    "#import validate\n",
     "\n",
     "\n",
     "# helper function of validate_couplet(x,y)\n",
@@ -296,13 +304,13 @@
     "    line_phonemes = [] \n",
     "    words = line.split(' ')\n",
     "    for word in words:\n",
-    "        word_phonemes = stress_dictionary.get(word)\n",
+    "        word_phonemes = ph.get_phonemes(word)\n",
     "        if len(word_phonemes) == 1:\n",
-    "            if num_of_syllables(word_phonemes[0]) == 1:\n",
-    "                word_phonemes.append([sound if not is_stressed(sound) else sound.replace('1', '0') for sound in word_phonemes[0]])\n",
+    "            if ph.num_of_syllables(word_phonemes[0]) == 1:\n",
+    "                word_phonemes.append([sound if not ph.is_stressed(sound) else sound.replace('1', '0') for sound in word_phonemes[0]])\n",
     "        line_phonemes.append(word_phonemes)\n",
-    "    for candidate in combinations(*line_phonemes):\n",
-    "        stresses = stress_mask(chain.from_iterable(candidate))\n",
+    "    for candidate in utils.combinations(*line_phonemes):\n",
+    "        stresses = ph.stress_mask(chain.from_iterable(candidate))\n",
     "        #print candidate, stresses\n",
     "        if stresses == structure:\n",
     "            return candidate\n",
@@ -313,34 +321,19 @@
     "    pass\n",
     "\n",
     "\n",
-    "def is_vowel(sound):\n",
-    "    return sound[-1].isdigit()\n",
-    "\n",
-    "def is_rhyme(pron1, pron2):\n",
-    "    vowels = [(i, sound) for i, sound in enumerate(pron1) if is_vowel(sound)]\n",
-    "    if vowels:\n",
-    "        idx, last_vowel = vowels[-1]\n",
-    "        return pron1[-(idx + 1):] == pron2[-(idx + 1):]\n",
-    "    else:\n",
-    "        return False\n",
-    "# #test\n",
-    "# for pron1 in d.get('was'):\n",
-    "#     for pron2 in d.get('because'):\n",
-    "#         print pron1, pron2, is_rhyme(pron1, pron2)\n",
-    "combinations([1,2,3],[4],[5,6],[7,8,9])\n",
+    "# EXAMPLES\n",
+    "utils.combinations([1,2,3],[4],[5,6],[7,8,9])\n",
     "print validate_line(\"there was a little guinea pig\", [False, True, False, True, False, True, False, True])\n",
     "print\n",
     "print validate_line(\"who being little was not big\", [False, True, False, True, False, True, False, True])\n",
     "print\n",
-    "print is_rhyme(validate_line(\"there was a little guinea pig\", [False, True, False, True, False, True, False, True])[-1],\n",
-    "               validate_line(\"who being little was not big\",  [False, True, False, True, False, True, False, True])[-1])\n",
-    "# if one looks at the output of the former sentence, it becomes clear words consisting of only one syllable are always said to be stressed. \n",
-    "# Therefore, a function that makes sure one-syllable-words can be both stressed and unstressed will be added."
+    "print ph.is_rhyme(validate_line(\"there was a little guinea pig\", [False, True, False, True, False, True, False, True])[-1],\n",
+    "               validate_line(\"who being little was not big\",  [False, True, False, True, False, True, False, True])[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
