--- a/News to lyric.ipynb
+++ b/News to lyric.ipynb
@@ -271,12 +271,12 @@
     "For more information, consult the files themselves. As they contain docstrings, it becomes clear what input they require and what output they provide.\n",
     "\n",
     "Under # EXAMPLES, one can see how couplets are validated. Each validate function has as input both phonemes or a couplet respectively, as well as a structure. The latter defines the kind of poem we would like to validate. For example, a structure can consist of a rhyme scheme(abab) and a stress pattern(stressed/true, unstressed/false, stressed/true ...).\n",
-    "In the output below the caption, the line which fits the requirements from the pattern is chosen from all combinations possible provided by cmudict'. However, cmudict predicted for words consisting of one syllable to be stressed at any time. Therefore,a function making sure one-syllable words can be both stressed ans unstressed has been added."
+    "In the output below the caption, the line which fits the requirements from the pattern is chosen from all combinations possible provided by cmudict'. However, cmudict predicted for words consisting of one syllable to be stressed at any time. Therefore, a function making sure one-syllable words can be both stressed ans unstressed has been added."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -285,9 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[u'DH', u'EH0', u'R'], [u'W', u'AA1', u'Z'], [u'AH0'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'G', u'IH1', u'N', u'IY0'], [u'P', u'IH1', u'G']]\n",
-      "\n",
-      "[[u'HH', u'UW0'], [u'B', u'IY1', u'IH0', u'NG'], [u'L', u'IH1', u'T', u'AH0', u'L'], [u'W', u'AA1', u'Z'], [u'N', u'AA0', u'T'], [u'B', u'IH1', u'G']]\n",
+      "['there was a little guinea pig', 'who being little was not big', 'he always walked upon his feet', 'and never fasted when he eat']\n",
       "\n",
       "True\n"
      ]
@@ -296,49 +294,54 @@
    "source": [
     "import phonetics as ph\n",
     "import utils\n",
-    "#import validate\n",
+    "import validate\n",
     "\n",
+    "couplet_string = \"\"\"there was a little guinea pig\n",
+    "who being little was not big\n",
+    "he always walked upon his feet\n",
+    "and never fasted when he eat\"\"\"\n",
     "\n",
-    "# helper function of validate_couplet(x,y)\n",
-    "def validate_line(line, structure):\n",
-    "    line_phonemes = [] \n",
-    "    words = line.split(' ')\n",
-    "    for word in words:\n",
-    "        word_phonemes = ph.get_phonemes(word)\n",
-    "        if len(word_phonemes) == 1:\n",
-    "            if ph.num_of_syllables(word_phonemes[0]) == 1:\n",
-    "                word_phonemes.append([sound if not ph.is_stressed(sound) else sound.replace('1', '0') for sound in word_phonemes[0]])\n",
-    "        line_phonemes.append(word_phonemes)\n",
-    "    for candidate in utils.combinations(*line_phonemes):\n",
-    "        stresses = ph.stress_mask(chain.from_iterable(candidate))\n",
-    "        #print candidate, stresses\n",
-    "        if stresses == structure:\n",
-    "            return candidate\n",
-    "        \n",
-    "\n",
-    "# returns true or false; does a couplet answer to the above mentioned scheme or not? Do lines (have to) rhyme?\n",
-    "def validate_couplet(couplet, structure):\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "# EXAMPLES\n",
-    "utils.combinations([1,2,3],[4],[5,6],[7,8,9])\n",
-    "print validate_line(\"there was a little guinea pig\", [False, True, False, True, False, True, False, True])\n",
-    "print\n",
-    "print validate_line(\"who being little was not big\", [False, True, False, True, False, True, False, True])\n",
-    "print\n",
-    "print ph.is_rhyme(validate_line(\"there was a little guinea pig\", [False, True, False, True, False, True, False, True])[-1],\n",
-    "               validate_line(\"who being little was not big\",  [False, True, False, True, False, True, False, True])[-1])"
+    "# EXAMPLE\n",
+    "print validate.validate_couplet(couplet_string.split('\\n'), [[False, True] * 4] * 4)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " 'cmudict',\n",
+       " 'get_phonemes',\n",
+       " 'is_consonant',\n",
+       " 'is_rhyme',\n",
+       " 'is_stressed',\n",
+       " 'is_vowel',\n",
+       " 'num_of_syllables',\n",
+       " 'stress_dict',\n",
+       " 'stress_mask']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import phonetics\n",
+    "\n",
+    "dir(phonetics)\n"
+   ]
   },
   {
    "cell_type": "code",
